# lintrans

./: .buildinfo  .dockerignore  .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  CHANGELOG.md  Dockerfile  MANIFEST.in  Main.tex  README.md  clean.sh  compile.py  dev_requirements.txt  flake.nix  generate_appendices.py  generate_release_notes.py  genindex.html  ideas.md  index.html  issues.md  justfile  lexers.py  lintrans.gui.dialogs.html  lintrans.gui.html  lintrans.gui.plots.html  lintrans.html  lintrans.matrices.html  lintrans.typing.html  main.css  main.tex  objects.inv  precompile.py  process_code_snippets.py  py-modindex.html  pyproject.toml  references.bib  requirements.txt  requirements_dev.txt  run_gui.py  (+7 more)
.github/ISSUE_TEMPLATE/: README.md  bug-report.yml  feature-suggestion.yml  gf-bug-report.js  gf-suggest-feature.js
.github/workflows/: build-docker-base-image.yaml  compile-docs.yaml  compile-pdf.yaml  compile-release.yaml  compile-test.yaml  compile.yaml  docs.yml  docstrings.yaml  gh-pages.yml  linting.yaml  linting.yml  tests.yaml  tests.yml  type-checks.yaml  type_checking.yml  type_checks.yaml
Sections/: Analysis.tex
_sources/: lintrans.gui.dialogs.rst.txt  lintrans.gui.plots.rst.txt  lintrans.matrices.rst.txt
bibs/: analysis.bib  docs.bib  misc.bib  mystuff.bib
code/: .gitignore  .pylintrc  README.md  requirements_dev.txt  setup.cfg  tox.ini
docker-base-image/: Dockerfile  texlive.profile
docs/: .buildinfo  .gitignore  Makefile  create_objects_inv.py  docs_requirements.txt  genindex.html  index.html  lintrans.gui.dialogs.html  lintrans.gui.html  lintrans.gui.plots.html  lintrans.html  lintrans.matrices.html  lintrans.typing.html  lintrans.typing_.html  objects.inv  py-modindex.html  pyqt5-objects.txt  search.html  searchindex.js
docs/_sources/: index.rst.txt  lintrans.gui.dialogs.rst.txt  lintrans.gui.plots.rst.txt  lintrans.gui.rst.txt  lintrans.typing.rst.txt
docs/_static/: documentation_options.js
docs/source/: .gitignore  bnf.txt  conf.py  index.rst  lintrans.gui.dialogs.rst  lintrans.gui.rst  lintrans.matrices.rst  lintrans.rst  lintrans.typing_.rst
docs/source/backend/: bnf.txt  index.rst  lintrans.gui.rst  lintrans.matrices.rst  lintrans.rst  lintrans.typing_.rst
docs/source/backend/_images/: .gitignore
docs/source/compilation/: index.rst  linux.rst  macos.rst  windows.rst
docs/source/tutorial/: anatomy-of-the-app.rst  composing-transformations.rst  configuring-display-settings.rst  configuring-global-settings.rst  defining-matrices.rst  expression-syntax.rst  index.rst  record_gif.bash  reporting-bugs-and-suggesting-features.rst  saving-and-loading-sessions.rst  visualizing-transformations.rst
images/: join.sh
installers/: Windows.nsi  install-lintrans-Linux.sh
patches/: add-pretex.patch
process-code-snippets/: .gitignore  Cargo.toml  flake.nix
process-code-snippets/src/: latex_tests.rs  main.rs
process-code-snippets/src/snippet/: comment.rs  config.rs  info_comment.rs  mod.rs  text.rs
sections/: analysis.tex  design.tex  development.tex  evaluation.tex  post_development_testing.tex
sections/development/: adding_display_settings.tex  fixing_bugs_and_adding_polish.tex  fumbling_with_semver.tex  implementing_eigenstuffs.tex  improving_the_gui.tex  initial_gui.tex  making_v0.2.2.tex  matrices_backend.tex  preparing_for_v0.2.1.tex  teacher_suggestions.tex  visualizing_matrices.tex
src/lintrans/: __init__.py  __main__.py  crash_reporting.py  global_settings.py  updating.py
src/lintrans/_parse/: __init__.py  matrices.py
src/lintrans/gui/: __init__.py  main_window.py  session.py  settings.py  utility.py  validate.py
src/lintrans/gui/assets/: .gitignore  128.xpm  16.xpm  32.xpm  64.xpm  compile.sh  icon.tex
src/lintrans/gui/dialogs/: __init__.py  define_new_matrix.py  misc.py  settings.py
src/lintrans/gui/plots/: __init__.py  classes.py  plot_widget.py  widgets.py
src/lintrans/matrices/: __init__.py  parse.py  utility.py  wrapper.py
src/lintrans/typing/: __init__.py
src/lintrans/typing_/: __init__.py
tests/: conftest.py  test_matrix_wrapper.py  test_matrix_wrapper_parse_expression.py  test_matrix_wrapper_setitem_and_getitem.py  test_temp.py
tests/_parse/: test_parse_and_validate_expression.py
tests/backend/: test_session.py
tests/backend/matrices/: test_parse_and_validate_expression.py
tests/backend/matrices/matrix_wrapper/: test_evaluate_expression.py  test_misc.py  test_setitem_and_getitem.py  test_setting_and_getting.py
tests/backend/matrices/utility/: test_coord_conversion.py  test_float_utility_functions.py
tests/gui/: test_define_dialogs.py  test_dialog_utility_functions.py  test_display_settings.py  test_other_dialogs.py
tests/matrices/: test_parse_and_validate_expression.py  test_rotation_matrices.py
tests/matrices/matrix_wrapper/: conftest.py  test_evaluate_expression.py  test_misc.py  test_parse_expression.py  test_setitem_and_getitem.py
tests/matrices/utility/: test_coord_conversion.py  test_rotation_matrices.py
tools/: flake.nix
tools/generate-appendices/: generate_appendices.py
tools/process-code-snippets/: Cargo.toml
tools/process-code-snippets/src/: latex_tests.rs  main.rs
tools/process-code-snippets/src/snippet/: comment.rs  config.rs
tutorial/: index.html
tutorial/compile/: compile.css  index.html  linux.html  macos.html  windows.html
write-up/: .gitignore  Main.tex
