[build-system]
requires = ['setuptools>=57.0', 'wheel']
build-backend = 'setuptools.build_meta'

[tool.pytest.ini_options]
testpaths = ['tests']

[tool.mypy]
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
no_implicit_reexport = true
