[build-system]
requires = ['setuptools>=57.0', 'wheel']
build-backend = 'setuptools.build_meta'

[tool.pytest.ini_options]
testpaths = ['tests']

[tool.mypy]
mypy_path = "$MYPY_CONFIG_FILE_DIR/dev/*-stubs"
files = "$MYPY_CONFIG_FILE_DIR/src/**/*.py,$MYPY_CONFIG_FILE_DIR/tests/**/*.py"
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
no_implicit_reexport = true
