[metadata]
name = lintrans
description = A project to allow students to easily visualise and interact with 2D linear transformations.
author = D. Dyson (DoctorDalek1963)
author_email = dyson.dyson@icloud.com
version = attr:lintrans.__version__
license = GPLv3
license_file = COPYING
url = https://github.com/DoctorDalek1963/lintrans
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Environment :: X11 Applications :: Qt
    Intended Audience :: Education
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Mathematics
    Typing :: Typed

[options]
packages =
    lintrans
install_requires =
    nptyping>=1.4
    numpy>=1.21
    pyqt5>=5.15
python_requires = >=3.10
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    flake8>=4.0
    mypy>=0.9
    pycodestyle>=2.8
    pydocstyle>=6.1
    pytest>=6.2
    pyqt5-stubs>=5.15
    toml>=0.10

[options.package_data]
lintrans = py.typed

[flake8]
max-line-length = 120

[pycodestyle]
max-line-length = 120
