[metadata]
name = lintrans
description = A project to allow students to easily visualise and interact with 2D linear transformations.
author = D. Dyson (DoctorDalek1963)
author_email = dyson.dyson@icloud.com
version = attr: lintrans.__version__
license = GPLv3
license_file = COPYING
url = https://github.com/DoctorDalek1963/lintrans
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Environment :: X11 Applications :: Qt
    Intended Audience :: Education
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering :: Mathematics
    Typing :: Typed

[options]
packages = find:
python_requires = >=3.10,<3.12
package_dir =
    =src
zip_safe = False
install_requires = file:requirements.txt

[options.packages.find]
where=src

[options.extras_require]
all =
    flake8==5.0.4
    isort==5.10.1
    mypy==0.981
    Pillow==9.2.0
    pre-commit==2.20.0
    pycodestyle==2.9.1
    pydocstyle==6.1.1
    pyinstaller==5.6
    pylint==2.13.5
    pytest==7.1.2
    pytest-custom-exit-code==0.3.0
    pytest-xvfb==2.0.0
    pyqt5-stubs==5.15.9
    Sphinx==5.0.0
    sphinx-rtd-theme==1.0.0
    sphinxcontrib-email==0.3.5
    sphobjinv==2.2
    toml==0.10.2
compile =
    Pillow==9.2.0
    pyinstaller==5.6
dev =
    flake8==5.0.4
    isort==5.10.1
    mypy==0.981
    pre-commit==2.20.0
    pycodestyle==2.9.1
    pydocstyle==6.1.1
    pytest==7.1.2
    pytest-custom-exit-code==0.3.0
    pytest-xvfb==2.0.0
    pyqt5-stubs==5.15.2.0
    toml==0.10.2
docs =
    pylint==2.13.5
    Sphinx==5.0.0
    sphinx-rtd-theme==1.0.0
    sphinxcontrib-email==0.3.5
    sphobjinv==2.2

[options.package_data]
lintrans = py.typed

[flake8]
max-line-length = 120

[pycodestyle]
max-line-length = 120
