[metadata]
name = lintrans
description = A project to allow students to easily visualise and interact with 2D linear transformations
author = Dyson
license = GPLv3
license_file = COPYING
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages =
    lintrans
install_requires =
    numpy>=1.21
python_requires = >=3.6
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    flake8>=4.0
    mypy>=0.9
    pytest>=6.2
    toml>=0.10

[options.package_data]
lintrans = py.typed

[flake8]
max-line-length = 120
