[package]
name = "process-code-snippets"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
git2 = { version = "0.15.0", default-features = false }
hex = "0.4.3"
itertools = "0.10.5"
lazy_static = "1.4.0"
nom = "7.1.2"
nom-regex = "0.2.0"
regex = "1.7.0"

[dev-dependencies]
pretty_assertions = "1.3.0"
